# galyleo-dashboard

./: .gitignore  README.md  build.mjs  dsd_15_4_2021.json  fonts.css  jupyterDriveResource.js  package.json  sample_config.js
galyleo-data/: galyleo-data-tests.js  (+1 more)
jupyterlab-universal-extension/: MANIFEST.in  README.md  build-extension.sh  install.json  make.sh  package-debug.json  package-deploy.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  untitled.gd.json
jupyterlab-universal-extension/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
jupyterlab-universal-extension/@engageLively/galyleo/: package.json
jupyterlab-universal-extension/@jupyterlab/lively-universal-extension/: package.json
jupyterlab-universal-extension/lib/: extension.d.ts  extension.js  index.js  toc.d.ts  toc.js
jupyterlab-universal-extension/lively-universal-extension/labextension/: package.json
jupyterlab-universal-extension/lively_universal_extension.egg-info/: PKG-INFO  SOURCES.txt
jupyterlab-universal-extension/lively_universal_extension/labextension/: package.json
jupyterlab-universal-extension/schema/: galyleo-settings.json
jupyterlab-universal-extension/src/: constants.ts  editor.ts  extension.ts  index.ts  manager.ts  svg.d.ts  toc.tsx
jupyterlab-universal-extension/src/UNKNOWN.egg-info/: SOURCES.txt
jupyterlab-universal-extension/static/: package.json
jupyterlab-universal-extension/static/static/: 568.a4f07dbb6b89271be9e0.js
jupyterlab-universal-extension/style/: index.css
jupyterlab-universal-extension/world-loader/: load.js
(+58 files in other folders)
