[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["@jupyterlab/lively-universal-extension/static/style.js"]
# ensured-targets = ["@jupyterlab/lively-universal-extension/static/style.js", "@jupyterlab/lively-universal-extension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
# build_cmd = "./build-extension.sh"
# npm = ["jlpm"]

[tool.check-manifest]
ignore = ["@jupyterlab/lively-universal-extension/**", "yarn.lock", ".*", "package-lock.json"]
